# research-insight-py-package

./: pyproject.toml  readme.md  research-insight.md
research_insight/: __init__.py
tests/: test.py
