[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-insight"
version = "0.1.0"
description = "Research-grade data summarization and insight generator"
readme = "research-insight.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name="Rohit Kaushik", email="kaushikrohit004@gmail.com" }
]
dependencies = [
    "pandas>=1.5",
    "matplotlib>=3.7",
    "seaborn>=0.12"
]

[tool.setuptools.packages.find]
where = ["."]
